--- a/index.html
+++ b/index.html
@@ -24,26 +24,27 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <main class="main">
       <div class="container">
         <div class="fylo">
           <img src="images/logo.svg" alt="Fylo logo" class="fylo__logo" />
-          <button class="fylo__btn btn-action"></button>
-          <button class="fylo__btn btn-action"></button>
-          <button class="fylo__btn btn-action"></button>
+          <button class="fylo__btn--1 fylo__btn"></button>
+          <button class="fylo__btn--2 fylo__btn"></button>
+          <button class="fylo__btn--3 fylo__btn"></button>
         </div>
         <div class="storage">
           <p class="storage__used">
             You've used <span>815 GB</span> of your storage
           </p>
           <div class="storage__avaliable-space">
-            <div class="storage-used-space"></div>
+            <div class="storage__used-space"></div>
           </div>
           <div class="storage__amount">
             <p>0 GB</p>
-            <p>100 GB</p>
+            <p>1000 GB</p>
           </div>
           <h2 class="storage__space-left">185 <span>GB Left</span></h2>
         </div>
@@ -53,7 +54,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by
+      <a href="https://github.com/anuarshaidenov" target="_blank"
+        >Anuar Shaidenov</a
+      >.
     </div>
   </body>
 </html>
